--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^6.0.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
@@ -33,6 +34,8 @@
     "express": "^4.21.1",
     "http-status": "1.7.4",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "nodemailer": "^6.9.16",
     "zod": "^3.23.8"
   }
 }
