--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.1",
     "@types/nodemailer": "^6.4.17",
     "prisma": "^6.0.1",
@@ -27,7 +28,9 @@
   },
   "dependencies": {
     "@prisma/client": "6.0.1",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -35,6 +38,8 @@
     "http-status": "1.7.4",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
     "zod": "^3.23.8"
   }
